--- a/并发编程.md
+++ b/并发编程.md
@@ -1,1 +1,60 @@
 
+一、线程池
+1、线程
+  线程的三种实现方式：Thread、Runnable、Callable
+方式一：继承Thread
+、、、
+  class TestThread extends Thread{
+    @Override
+    public void run() {
+        System.out.println("我是继承Thread");
+    }
+}
+new TestThread().start();
+、、、
+
+方式二、实现Runnable
+、、、
+  class TestRunnable implements Runnable{
+    @Override
+    public void run() {
+        System.out.println("我是实现自Runnable");
+    }
+}
+new Thread(new TestRunnable()).start();
+、、、
+
+方式三、实现Callable
+、、、
+  class TestCallable implements Callable<String>{
+    private String acceptStr;
+    public TestCallable(String acceptStr){
+        this.acceptStr = acceptStr;
+    }
+    @Override
+    public String call() throws Exception {
+        Thread.sleep(1000);
+        return this.acceptStr + "append some chars and return it!";
+    }
+}
+FutureTask<String> futureTask = new FutureTask<>(new TestCallable("my callable test!"));
+new Thread(futureTask).start();
+System.out.println(futureTask.get());
+、、、
+ 
+2、线程池
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
