--- a/并发编程.md
+++ b/并发编程.md
@@ -5,9 +5,17 @@
 
   线程的三种实现方式：Thread、Runnable、Callable
   
+  线程的生命状态：
+    NEW：新建
+    RUNNABLE:运行
+    BLOCKED:阻塞
+    WAITING:等待
+    TIMED_WAITING:超时等待
+    TERMINATED:终结
+    
+   线程间的状态切换：https://www.processon.com/diagraming/5e7bfce6e4b027d999cd22cf
+  
 方式一：继承Thread
-
-、、、
 
   class TestThread extends Thread{
   
@@ -22,11 +30,7 @@
 
 new TestThread().start();
 
-、、、
-
 方式二、实现Runnable
-
-、、、
 
   class TestRunnable implements Runnable{
   
@@ -40,11 +44,7 @@ new TestThread().start();
 }
 new Thread(new TestRunnable()).start();
 
-、、、
-
 方式三、实现Callable
-
-、、、
 
   class TestCallable implements Callable<String>{
   
@@ -72,8 +72,6 @@ FutureTask<String> futureTask = new FutureTask<>(new TestCallable("my callable t
 new Thread(futureTask).start();
   
 System.out.println(futureTask.get());
-  
-、、、
  
 2、线程池
   
