--- a/并发编程.md
+++ b/并发编程.md
@@ -88,8 +88,10 @@ System.out.println(futureTask.get());
   
   https://user-images.githubusercontent.com/38527234/126577401-6193da1b-2a12-4eb6-8844-51bc83a12831.png
 
+  Executor框架：
   
-  
+  图为它的继承与实现：https://user-images.githubusercontent.com/38527234/126600952-ab7f66ec-b33d-43c7-8862-4afe7f98dc09.png
+
   
   
   
