--- a/并发编程.md
+++ b/并发编程.md
@@ -91,6 +91,14 @@ System.out.println(futureTask.get());
   Executor框架：
   
   图为它的继承与实现：https://user-images.githubusercontent.com/38527234/126600952-ab7f66ec-b33d-43c7-8862-4afe7f98dc09.png
+  
+  Executor下有一个重要的子接口ExecutorService,其中定义了线程池的具体行为：
+  
+  execute(Runnable command) : 处理Runnable类型提交上来的任务
+  
+  submit(Runnable task) : 可以用来提交Callable或Runnable任务，并返回代表此任务的Future对象
+  
+  
 
   
   
