--- a/并发编程.md
+++ b/并发编程.md
@@ -98,8 +98,68 @@ System.out.println(futureTask.get());
   
   submit(Runnable task) : 可以用来提交Callable或Runnable任务，并返回代表此任务的Future对象
   
+  shutdown():在完成已提交的任务后封闭办事，不再接管新任务
   
+  shutdownNow(): 停止所有正在履行的任务并封闭办事
+  
+  isTerminated():测试是否所有任务都履行完毕了
+  
+  isShutdown():测试是否ExecutorService已被关闭
+  
+  线程池ThreadPoolExecutor重点属性详解：
+   
+  //ctl是对线程池的运行状态和线程池中有效线程的数量进行控制的一个字段，它包含两部分信息：线程池的运行状态（runState）和线程池内有效线程的数量（workerCount）
+  
+  private final AtomicInteger ctl = new AtomicInteger(ctlOf(RUNNING, 0));
+  
+  //低29位保存workerCount
+  
+  private static final int COUNT_BITS = Integer.SIZE - 3;
+  
+  //高3为保存runState
+  
+  private static final int CAPACITY   = (1 << COUNT_BITS) - 1;
+  
+  //获取运行状态
+  
+  private static int runStateOf(int c)     { return c & ~CAPACITY; }
+  
+  //获取活动线程数
+  
+  private static int workerCountOf(int c)  { return c & CAPACITY; }
+  
+  //获取运行状态和活动线程数
+  
+  private static int ctlOf(int rs, int wc) { return rs | wc; }
 
+  线程池存在5种状态
+ 
+  //高3位为111，线程池处在RUNNABLE状态时，能够接收任务，以及对已添加的任务进行处理。线程池的初始化状态是RUNNABLE。换句话说，线程池一旦被创建，就处于RUNNABLE状态，并且线程池种的任务数为0
+ 
+  private static final int RUNNING    = -1 << COUNT_BITS;
+  
+  //高3位为000，线程池处在SHUTDOWN状态时，不接收新任务，但能处理已添加的任务。调用线程池的shutdown()接口时，线程池由RUNNING->SHUTDOWN。
+  
+  private static final int SHUTDOWN   =  0 << COUNT_BITS;
+  
+  //高3位001，线程池处在STOP状态时，不接收新任务，不处理已添加的任务，并且中断正在处理的任务。
+ 
+  private static final int STOP       =  1 << COUNT_BITS;
+  
+  //高3位为010，当所有的任务已终止，ctl记录的“任务数量”为0，线程池会变为TIDYING状态。当线程池变为TIDYING状态时，会执行钩子函数terminated()。terminated()在ThreadPoolExecutor类中是空的。若用户想在线程池变为TIDYING时，进行相应的处理；可以通过重载terminated()函数来实现。当线程池在SHUTDOWN状态下，阻塞队列为空并且线程池中执行的任务为空时，就会由SHUTDOWN->TIDYING。当线程池在STOP状态下，线程池中执行的任务为空时，就会由STOP->TIDYING.
+  
+  private static final int TIDYING    =  2 << COUNT_BITS;
+  
+  //高3位为011，线程池彻底终止，就变成TERMINATED状态。线程池处在TIDYING状态时，执行完terminated()，就会由TIDYING->TERMINATED。
+  
+  private static final int TERMINATED =  3 << COUNT_BITS;
+  
+  
+  线程池的具体实现：
+  
+  ThreadPoolExecutor:默认线程池
+  
+  ScheduledThreadPoolExecutor:定时线程池
   
   
   
