--- a/并发编程.md
+++ b/并发编程.md
@@ -166,34 +166,90 @@ System.out.println(futureTask.get());
   
   线程池的实例化构造器：
   
-   public ThreadPoolExecutor(int corePoolSize,
-                              int maximumPoolSize,
-                              long keepAliveTime,
-                              TimeUnit unit,
-                              BlockingQueue<Runnable> workQueue,
-                              ThreadFactory threadFactory,
-                              RejectedExecutionHandler handler) {
-        if (corePoolSize < 0 ||
-            maximumPoolSize <= 0 ||
-            maximumPoolSize < corePoolSize ||
-            keepAliveTime < 0)
+   public ThreadPoolExecutor(int corePoolSize,int maximumPoolSize,long keepAliveTime,TimeUnit unit,BlockingQueue<Runnable> workQueue,ThreadFactory,threadFactor
+    ,RejectedExecutionHandler handler) {
+  
+        if (corePoolSize < 0 ||maximumPoolSize <= 0 ||maximumPoolSize < corePoolSize ||keepAliveTime < 0)
+  
             throw new IllegalArgumentException();
+  
         if (workQueue == null || threadFactory == null || handler == null)
+  
             throw new NullPointerException();
-        this.acc = System.getSecurityManager() == null ?
-                null :
-                AccessController.getContext();
+  
+        this.acc = System.getSecurityManager() == null ?null :AccessController.getContext();
+  
         this.corePoolSize = corePoolSize;
+  
         this.maximumPoolSize = maximumPoolSize;
+  
         this.workQueue = workQueue;
+  
         this.keepAliveTime = unit.toNanos(keepAliveTime);
+  
         this.threadFactory = threadFactory;
+  
         this.handler = handler;
+  
     }
   
+  任务提交：
+   
+  提交任务无返回值：public void execute(Runnable command)
   
+  任务执行完成后有返回值：public Future<?> submit()
   
+  参数解释：
   
+corePoolSize：核心线程数，表示这个池中的核心线程数，当提交一个任务时，线程池就会创建一个核心线程来执行该任务（前提，当前线程数小于核心线程数），当核心线程池已达到最大时，后面来的任务就会被保存到阻塞队列中。
+
+maximumPoolSize：线程池中允许的最大线程池数。如果阻塞队列满了，且任务还在继续提交，则创建新的非核心线程执行该任务，前提时当前线程数小于maximumPoolSize
+
+keepAliveTime：线程池维护线程所允许的空闲时间。当线程池中的线程数量大于corePoolSize的时候，如果这时没有新的任务提交，核心线程外的线程不会立即销毁，而是会等待，直到等待的时间超过了keepAliveTime
+
+unit: keepAliveTime的单位
+
+workQueue:用来保存等待被执行的任务的阻塞队列，且任务必须实现Runnable接口，在JDK中主要有如下阻塞队列：
+  
+  ArrayBlockingQueue:基于数组结构的有界阻塞队列，按FIFO排序任务
+
+  LinkedBlockingQueue:基于链表结构的阻塞队列，按FIFO排序任务，吞吐量通常要高于ArrayBlockingQueue
+
+  SynchronousQueue:一个不存储元素的阻塞队列，每个插入操作必须等到另一个线程调用移除操作，否则插入操作一直处于阻塞状态，吞吐量通常要高于LinkedBlockingQueue
+
+  PriorityBlockingQueue:具有优先级的无界阻塞队列
+
+threadFactory:它是ThreadFactory类型的变量，用来创建新线程。默认使用Executors.defaultThreadFactory() 来创建线程。使用默认的ThreadFactory来创建线程时，会使新创建的线程具有相同的NORM_PRIORITY优先级并且是非守护线程，同时也设置了线程的名称。
+
+handler:线程池的饱和策略，当阻塞队列满了，且没有空闲的工作线程，如果继续提交任务，必须采取一种策略处理该任务，线程池提供了4种策略：
+  
+  AbortPolicy:直接抛出异常，默认策略
+
+  CallerRunsPolicy:用调用者所在的线程来执行任务
+
+  DiscardOldestPolicy:丢弃阻塞队列中靠最前的任务，并且执行当前任务
+
+  DiscardPolicy:直接丢弃任务
+
+上面的4种策略都是ThreadPoolExecutor的内部类。当然也可以根据应用场景实现RejectedExecutionHandler接口，自定义饱和策略，如记录日志或持久化存储不能处理的任务。
+
+
+线程池监控：
+  
+public long getTaskCount() //线程池已执行与未执行的任务总数
+
+public long getCompletedTaskCount() //已完成的任务数
+
+public int getPoolSize() //线程池当前的线程数
+
+public int getActiveCount() //线程池中正在执行任务的线程数量
+
+线程池原理：https://user-images.githubusercontent.com/38527234/126646305-1790a4ed-a2cb-4b47-bc0e-482a1ba8f99d.png
+
+https://user-images.githubusercontent.com/38527234/126646381-75461d3a-6589-42f2-b08a-4fabf1ba6eff.png
+
+
+
   
   
   
